# SonicGameOpenGL

./: CMakeLists.txt  README.md
Models/Alpha/: 1.DWG  1.STL  Health.mtl  _7.mtl
Models/KindApple/: kind_apple.mtl
Models/Numbers/: 0-UDSeo.stl  0p-UDSeo.stl  1-UDSeo.stl  1p-UDSeo.stl  2-UDSeo.stl  2p-UDSeo.stl  3-UDSeo.stl  3p-UDSeo.stl  4-UDSeo.stl  4p-UDSeo.stl  5-UDSeo.stl  5p-UDSeo.stl  6-UDSeo.stl  6p-UDSeo.stl  7-UDSeo.stl  7p-UDSeo.stl  8-UDSeo.stl  8p-UDSeo.stl  9-UDSeo.stl  9p-UDSeo.stl
Models/Roads/: ConnecedRoads.blend1  MyRoad.blend  RoadWith.mtl  RoadWith2.mtl
Models/Roads-new/: ConnecedRoads.blend  ConnecedRoads.mtl  ConnectedRoads.3ds  ConnectedRoads.mtl  EdittedRoads-copy.mtl  EdittedRoads.mtl  MyRoad.mtl  Road-try.mtl  RoadWith.mtl  Roads.blend  allRoades.mtl  connected_roads.3ds  connected_roads.blend  connected_roads.blend1  connected_roads.mtl  road.blend  road.blend1
Models/SonicSo/source/: Skate.mtl  Sonic.mtl
Models/Water/: wat1.mtl  wat3.mtl  wat4.mtl  wat7.mtl
Models/apple/: apple.mtl  apple_try.blend
Models/coin/: Coin.mtl
Shaders/: lamp_fragment.shader  lamp_vertex.shader  lighting_fragment.shader  lighting_vertex.shader
src/: Source.cpp
src/Compontents/: Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Window/: Window.cpp  Window.h
